03_code2/grade.txt
Grading at Sun Aug  2 09:04:59 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:19:9: error: expected ‘;’ before ‘}’ token
      i=j}
         ^
The code did not have legal syntax!

Overall Grade: F
